@@ -1,6 +1,8 @@
 Version 1.6
 ------------------------------------------------------------------------------
 
+* allow arrange to work with one column data frames
+
 Version 1.5.2
 ------------------------------------------------------------------------------
 
